# FieldOps

./: .env.example  .gitignore  .gitignore-template  AGENTS.md  CHANGELOG.md  DESIGN.md  README.md  pyproject.toml  setup-symlinks.sh
.agents/: LOADOUT.md
.agents/mcp/: MCP.md  servers.md
.agents/memory/: PICKUP.md  decisions.md  learnings.md
.agents/personas/: architect.md  devsecops.md  docs-writer.md  engineer.md  researcher.md  reviewer.md  tester.md
.agents/rules/: coding.md  git.md  security.md  style.md
.agents/workflows/: bug-fix.md  feature-branch.md  release.md  startcycle.md
docs/: CONTRIBUTING.md  DEPLOYMENT.md
docs/ADR/: 000-template.md
knowledge-base/: kb-ftth-installation-rules.txt  kb-ftth-optical-standards.txt
reports/: audit.md  coverage.md  openapi_validation.md
spec/: API_SPEC.md  ARCHITECTURE.md  DB_SCHEMA.md  acceptance.md  openapi.yaml  plan.md  requirements.md
spec/tasks/: T001-example-task.md  T001-setup-and-scaffold.md  T002-mock-data-and-rest-apis.md  T003-pwa-shell-and-offline-storage.md  T004-local-edge-qa-and-ocr.md  T005-rest-api-synchronizer.md  T006-adk-websocket-live-agent.md  T007-specialist-cognitive-agents.md  T008-safety-validation-gates.md  T009-cloud-persistence-integration.md  T010-conversational-analytics-agent.md  T011-claude-layout-and-english.md  T012-claude-layout-static-uploader.md  T013-voice-dictation-speech-recognition.md  T014-rest-photo-upload-api.md  (+4 more)
src/: __init__.py  main.py
src/agents/: analytics.py  (+6 more)
tests/: test_english_conversion.py  test_guided_audit.py  test_health.py  test_websocket.py
(+34 files in other folders)
