[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fieldops"
version = "0.1.0"
description = "FieldOps — voice-first, AI-powered FTTH quality inspection companion"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.20.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "google-cloud-storage>=2.0.0",
    "google-cloud-firestore>=2.0.0",
    "google-cloud-bigquery>=3.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
